<resources>
    <string name="app_name">localbuddy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_login">Login</string>
    <string name="menu_signup">Signup</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_home">Home</string>

    <string name="login">Login</string>
    <string name="signup">Sign up</string>

    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="address">Address</string>

    <string name="new_user_signup_text">new user? Signup</string>
    <string name="pincode">Pincode</string>
    <string name="gst_no">GST No.</string>
    <string name="shopname">Shopname</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="logout">Logout</string>
    <string name="home_stock">Choose from a wide variety of products!</string>
    <string name="ruppee">\u20B9</string>
    <string name="confirm_msg">Congratulations! Your order has been placed and will be delivered to you shortly</string>
    <string name="orders_menu">Your Orders</string>
    <string name="add_feedback">Add Feedback</string>
    <string name="your_cart">Your Cart</string>
    <string name="add_gift_options">Add gift options</string>
</resources>