<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                tools:src="@drawable/nike" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_margin="3dp"
                app:cardCornerRadius="3dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/content_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">

                    <TextView
                        android:id="@id/product_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Nike GTX" />

                    <TextView
                        android:id="@id/product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/product_title"
                        tools:text="Nike GTX" />

                    <TextView
                        android:id="@+id/product_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/product_price"
                        tools:text="Nike GTX" />

                    <LinearLayout
                        android:id="@+id/list_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="2dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/product_desc">

                        <TextView
                            android:id="@+id/add_feedback"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:text="@string/add_feedback"
                            android:layout_gravity="start"
                            android:layout_marginBottom="5dp"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/feedback_list"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            android:visibility="visible"/>

                        <com.google.android.material.progressindicator.CircularProgressIndicator
                            android:id="@+id/progressBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:indeterminate="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/button_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="100"
                        app:layout_constraintTop_toBottomOf="@id/list_layout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="8dp">

                        <Button
                            android:id="@+id/buyNow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:text="@string/buy_now" />

                        <Button
                            android:id="@+id/addToCart"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:text="@string/add_to_cart" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</layout>